Fix build parameter setting, should be a hash of repos

--- a/puppet/modules/slave/templates/test_pull_requests.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests.json.erb
@@ -20,7 +20,9 @@
       "repo_to_orgs": {
         "foreman": ["theforeman", "katello"]
       },
-      "repo_to_pull_id_param": "pr_number"
+      "repo_to_pull_id_param": {
+        "foreman": "pr_number"
+      }
     }
   }
 }
