--- a/puppet/modules/slave/templates/test_pull_requests_proxy.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_proxy.json.erb
@@ -21,7 +21,9 @@
       "repo_to_orgs": {
         "smart-proxy": ["theforeman", "katello"]
       },
-      "repo_to_pull_id_param": "pr_number"
+      "repo_to_pull_id_param": {
+        "smart-proxy": "pr_number"
+      }
     }
   }
 }
