Prevent PR scanner going older than PR#400

--- a/puppet/modules/slave/templates/test_pull_requests.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests.json.erb
@@ -7,6 +7,7 @@
   "github_user": "theforeman",
   "bot_github_user": "<%= github_user -%>",
   "repo_groups": {},
+  "oldest_pr": 400,
   "settings": {
     "test_settings": {
       "name": "test",
