Add IRC channel to messages

--- a/puppet/modules/slave/templates/test_pull_requests.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests.json.erb
@@ -6,6 +6,7 @@
   "hub_config": "~/.config/hub",
   "github_user": "theforeman",
   "bot_github_user": "<%= github_user -%>",
+  "irc_channel": "#theforeman-dev",
   "repo_groups": {},
   "oldest_pr": 400,
   "settings": {
