--- a/puppet/modules/slave/templates/test_pull_requests_proxy.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_proxy.json.erb
@@ -6,6 +6,7 @@
   "hub_config": "~/.config/hub",
   "github_user": "theforeman",
   "bot_github_user": "<%= github_user -%>",
+  "irc_channel": "#theforeman-dev",
   "not_mergable_cache": "~/test_pull_request_proxy_not_mergable",
   "repo_groups": {},
   "settings": {
