fixed ordering and invalid yaml

--- a/puppet/modules/redmine/templates/database.yml.erb
+++ b/puppet/modules/redmine/templates/database.yml.erb
@@ -1,5 +1,5 @@
-<%= environment %>:
+<%= scope.lookupvar('redmine::environment') %>:
   adapter: sqlite3
-  database: db/<%= environment %>.sqlite3
+  database: db/<%= scope.lookupvar('redmine::environment') %>.sqlite3
   pool: 5
   timeout: 5000
