TLS is casuing errors, disable for now

--- a/puppet/modules/exim/templates/exim.conf.erb
+++ b/puppet/modules/exim/templates/exim.conf.erb
@@ -27,12 +27,12 @@ av_scanner = <%= av_scanner %>
 spamd_address=<%= spamd_address %>
 <% end %>
 
-tls_advertise_hosts = <%= tls_advertise_hosts %>
-tls_certificate = <%= tls_certificate %>
-tls_privatekey = <%= tls_privatekey %>
+#tls_advertise_hosts = <%= tls_advertise_hosts %>
+#tls_certificate = <%= tls_certificate %>
+#tls_privatekey = <%= tls_privatekey %>
 
 daemon_smtp_ports = <%= daemon_smtp_ports %>
-tls_on_connect_ports = <%= tls_on_connect_ports %>
+#tls_on_connect_ports = <%= tls_on_connect_ports %>
 
 <% if qualify_domain != "" %>
 qualify_domain = <%= qualify_domain %>
