Bind exim to localhost only for security

--- a/puppet/modules/exim/templates/exim.conf.erb
+++ b/puppet/modules/exim/templates/exim.conf.erb
@@ -10,6 +10,8 @@
 
 primary_hostname = <%= primary_hostname %>
 
+local_interfaces = <; 127.0.0.1
+
 domainlist local_domains = <%= domainlist_local_domains %>
 domainlist relay_to_domains = <%= domainlist_relay_to_domains %>
 hostlist   relay_from_hosts = <%= hostlist_relay_from_hosts %>
