Fix nudnik's access to new redmine issue url

--- a/puppet/modules/rbot/templates/redmine_urls.rb.erb
+++ b/puppet/modules/rbot/templates/redmine_urls.rb.erb
@@ -155,7 +155,7 @@ class RedmineUrlsPlugin < Plugin
   end
 
 	def bug_url(base_url, project, num)
-		base_url + '/issues/show/' + num
+		base_url + '/issues/' + num
 	end
 
 	def wiki_url(base_url, project, page)
