Add /wiki/foreman redirect for redmine

--- a/puppet/modules/redmine/templates/vhost.erb
+++ b/puppet/modules/redmine/templates/vhost.erb
@@ -10,5 +10,6 @@
   ServerSignature Off
   RewriteEngine on
   RewriteRule   ^/wiki(.*)  http://projects.theforeman.org/projects/foreman/wiki$1  [R,L]
+  RewriteRule   ^/wiki/foreman(.*) http://projects.theforeman.org/projects/foreman/wiki$1 [R,L]
 
 </VirtualHost>
