--- a/puppet/modules/slave/templates/test_pull_requests_hammer_cli_foreman.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_hammer_cli_foreman.json.erb
@@ -20,10 +20,10 @@
                                 "build_token": "<%= jenkins_build_token -%>"
                                 } },
       "repo_to_orgs": {
-        "hammer-cli-foreman: ["theforeman", "katello"]
+        "hammer-cli-foreman": ["theforeman", "katello"]
       },
       "repo_to_pull_id_param": {
-        "hammer-cli-foreman: "pr_number"
+        "hammer-cli-foreman": "pr_number"
       }
     }
   }
