--- a/puppet/modules/freight/templates/rsync.erb
+++ b/puppet/modules/freight/templates/rsync.erb
@@ -36,7 +36,7 @@ if [[ `echo $SSH_ORIGINAL_COMMAND | awk '{ print $NF }'` =~ ^rsync_cache/.* ]] ;
 
   find /srv/freight/rsync_cache/$DISTRO/$REPO -iname '*.deb' -exec freight-add {} apt/$DISTRO/$REPO \;
   # Publish the debs
-  freight-cache -v
+  freight-cache -v apt/$DISTRO
   # Cleanup - no need to keep the debs
   find /srv/freight/rsync_cache/$DISTRO/$REPO -iname '*.deb' -delete
 fi
