--- a/puppet/modules/freight/templates/cron.erb
+++ b/puppet/modules/freight/templates/cron.erb
@@ -5,6 +5,7 @@
 # This won't actually remove them, but the next time freight-cache runs
 # (.e. when the next nightly is built) they will be removed from the web repo
 
-. /etc/freight.conf
+. <%= home %>/freight.conf
 
 find $VARLIB -mtime +6 -iname "*nightly*deb" -delete
+find $VARLIB -mtime +6 -iname "*scratch*deb" -delete
