--- a/puppet/modules/freight/templates/freight.conf.erb
+++ b/puppet/modules/freight/templates/freight.conf.erb
@@ -2,8 +2,8 @@
 
 # Directories for the Freight library and Freight cache.  Your web
 # server's document root should be `$VARCACHE`.
-VARLIB="<%= freight_home %>/staged"
-VARCACHE="<%= freight_home %>/web"
+VARLIB="<%= home %>/staged"
+VARCACHE="<%= home %>/web"
 
 # Default `Origin` and `Label` fields for `Release` files.
 ORIGIN="TheForeman"
