--- a/puppet/modules/freight/templates/rsync.erb
+++ b/puppet/modules/freight/templates/rsync.erb
@@ -36,7 +36,7 @@ if [[ `echo $SSH_ORIGINAL_COMMAND | awk '{ print $NF }'` =~ ^rsync_cache/.* ]] ;
 
   find <%= home %>/rsync_cache/$DISTRO/$REPO -iname '*.deb' -exec freight-add -v -c <%= home %>/freight.conf {} apt/$DISTRO/$REPO \;
   # Publish the debs
-  freight-cache -c -v apt/$DISTRO
+  freight-cache -c <%= home %>/freight.conf -v apt/$DISTRO
   # Cleanup - no need to keep the debs
   find <%= home %>/rsync_cache/$DISTRO/$REPO -iname '*.deb' -delete
 fi
