--- a/puppet/modules/freight/templates/keys.erb
+++ b/puppet/modules/freight/templates/keys.erb
@@ -1,3 +1,3 @@
-<% @ip_data.each do |host,data| -%>
+<% @ip_data.sort.each do |host,data| -%>
 from="<%= data['ipaddress'] %>",command="<%= @home %>/bin/freight_rsync" ssh-rsa <%= @pub_key %> <%= host %>
 <% end -%>
