Use git_url/ref parameters

--- a/puppet/modules/slave/templates/test_pull_requests_hammer_cli_katello.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_hammer_cli_katello.json.erb
@@ -23,7 +23,7 @@
         "hammer-cli-katello": ["theforeman", "katello"]
       },
       "repo_to_pull_id_param": {
-        "hammer-cli-katello": "pr_number"
+        "hammer-cli-katello": {"git_url":"git_url","ref":"git_ref","number":"pr_number"}
       }
     }
   }
