--- a/puppet/modules/slave/templates/test_pull_requests_smart_proxy.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_smart_proxy.json.erb
@@ -23,7 +23,7 @@
         "smart-proxy": ["theforeman", "katello"]
       },
       "repo_to_pull_id_param": {
-        "smart-proxy": "pr_number"
+        "smart-proxy": {"git_url":"git_url","ref":"git_ref","number":"pr_number"}
       }
     }
   }
