Add pr_ prefix to parameters

--- a/puppet/modules/slave/templates/test_pull_requests_foreman.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman.json.erb
@@ -23,7 +23,7 @@
         "foreman": ["theforeman", "katello"]
       },
       "repo_to_pull_id_param": {
-        "foreman": {"git_url":"git_url","ref":"git_ref","number":"pr_number"}
+        "foreman": {"git_url":"pr_git_url","ref":"pr_git_ref","number":"pr_number"}
       }
     }
   }
