Adds passing of base branch parameter to allow identifying the target branch for a given pull request.

--- a/puppet/modules/slave/templates/test_pull_requests_katello.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_katello.json.erb
@@ -23,7 +23,12 @@
         "katello": ["theforeman", "katello"]
       },
       "repo_to_pull_id_param": {
-        "katello": "pr_number"
+        "katello": {
+          "git_url": "pr_git_url",
+          "ref": "pr_git_ref",
+          "number": "pr_number",
+          "base_branch": "branch"
+        }
       }
     }
   }
