--- a/puppet/modules/slave/templates/test_pull_requests_katello.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_katello.json.erb
@@ -15,7 +15,7 @@
       "test_prefix": "Test Results:",
       "allow_multiple": true,
       "run_without_trigger": true,
-      "branches": { "master": {"jenkins_job_name": "test_katello_pull_request",
+      "branches": { "*": {"jenkins_job_name": "test_katello_pull_request",
                                 "downstream_job_name": "test_katello",
                                 "build_token": "<%= jenkins_build_token -%>"
                                 } },
