hammer-cli-katello repo moved

--- a/puppet/modules/slave/templates/test_pull_requests_hammer_cli_katello.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_hammer_cli_katello.json.erb
@@ -4,7 +4,7 @@
   "jenkins_host": "http://ci.theforeman.org/",
   "jenkins_url": "http://ci.theforeman.org/",
   "hub_config": "~/.config/hub",
-  "github_user": "theforeman",
+  "github_user": "Katello",
   "bot_github_user": "<%= github_user -%>",
   "irc_channel": "#theforeman-dev",
   "not_mergable_cache": "~/test_pull_request_hammer_cli_katello_not_mergable",
