Fix rbot module to (mostly) work on CentOS

--- a/puppet/modules/rbot/templates/conf.yaml.erb
+++ b/puppet/modules/rbot/templates/conf.yaml.erb
@@ -5,6 +5,7 @@ plugins.path:
 - <%= dir %>
 <% end -%>
 core.language: <%= scope.lookupvar('rbot::core_language') %>
+core.db: tc
 core.address_prefix:
 - "<%= scope.lookupvar('rbot::address_prefix') %>"
 irc.nick: <%= scope.lookupvar('rbot::nickname') %>
