--- a/puppet/modules/rbot/templates/rbot-init.erb
+++ b/puppet/modules/rbot/templates/rbot-init.erb
@@ -1,4 +1,7 @@
 #! /bin/sh
+#
+# chkconfig: - 59 73
+#
 ### BEGIN INIT INFO
 # Provides:          sabnzbd, episode butler
 # Short-Description: start/stop sabnzbd and episode butler web interface
