Allow override of webdir
ALso updates some puppet3 deprecations

--- a/puppet/modules/freight/templates/freight.conf.erb
+++ b/puppet/modules/freight/templates/freight.conf.erb
@@ -2,8 +2,8 @@
 
 # Directories for the Freight library and Freight cache.  Your web
 # server's document root should be `$VARCACHE`.
-VARLIB="<%= home %>/staged"
-VARCACHE="<%= home %>/web"
+VARLIB="<%= @home %>/staged"
+VARCACHE="<%= @webdir %>"
 
 # Default `Origin` and `Label` fields for `Release` files.
 ORIGIN="TheForeman"
