--- a/puppet/modules/freight/templates/cron.erb
+++ b/puppet/modules/freight/templates/cron.erb
@@ -10,7 +10,7 @@
 
 # Source the conffile
 unless ENV['VARLIB']
-  key = `source <%= home %>/freight.conf 2> /dev/null && echo $VARLIB`.chomp
+  key = `source <%= @home %>/freight.conf 2> /dev/null && echo $VARLIB`.chomp
   ENV['VARLIB'] = key unless key.empty?
 end
 exit unless ENV['VARLIB']
@@ -25,7 +25,7 @@ raw_files = []
 <% else -%>
   raw_files += Dir.glob('**/nightly/*deb')  # Always clean all of the nightly repo
   <% cron_matches.each do |cron| -%>
-  raw_files += Dir.glob('**/*<%= cron %>*deb')  # Input from Freight class
+  raw_files += Dir.glob('**/*<%= @cron %>*deb')  # Input from Freight class
   <% end -%>
 <% end -%>
 raw_files.uniq!
@@ -59,5 +59,5 @@ end
 files_to_remove.uniq!
 File.unlink(*files_to_remove)
 
-system "sudo -u <%= user %> /usr/local/bin/freight-cache -c <%= home %>/freight.conf"
-system "chown -R <%= user %> <%= home %>"
+system "sudo -u <%= @user %> /usr/local/bin/freight-cache -c <%= @home %>/freight.conf"
+system "chown -R <%= @user %> <%= @home %>"
