Make freight staging dir configurable too

--- a/puppet/modules/freight/templates/freight.conf.erb
+++ b/puppet/modules/freight/templates/freight.conf.erb
@@ -2,7 +2,7 @@
 
 # Directories for the Freight library and Freight cache.  Your web
 # server's document root should be `$VARCACHE`.
-VARLIB="<%= @home %>/staged"
+VARLIB="<%= @stagedir %>"
 VARCACHE="<%= @webdir %>"
 
 # Default `Origin` and `Label` fields for `Release` files.
