Follow symlinks in freight

--- a/puppet/modules/freight/templates/freight.conf.erb
+++ b/puppet/modules/freight/templates/freight.conf.erb
@@ -13,3 +13,6 @@ LABEL="TheForeman"
 # repository provider.  Use `gpg --gen-key` (see `gpg`(1) for more
 # details) to generate a key and put its email address here.
 GPG="packages@theforeman.org"
+
+# Follow symlinks in VARLIB
+SYMLINKS="true"
