--- a/puppet/modules/web/templates/rsync.erb
+++ b/puppet/modules/web/templates/rsync.erb
@@ -31,7 +31,7 @@ if [[ `echo $SSH_ORIGINAL_COMMAND | awk '{ print $NF }'` =~ ^rsync_cache/.* ]] ;
   find /home/website/rsync_cache -type f -exec chmod 644 {} \;
   find /home/website/rsync_cache -type d -exec chmod 755 {} \;
   # Publish the site
-  rsync -avPx /home/website/rsync_cache/ /var/www/vhosts/web_theforeman.org/ --delete-after
+  rsync -avPx /home/website/rsync_cache/ /var/www/vhosts/web/htdocs/ --delete-after
   # Cleanup - no need to keep the tmp site
   rm -rf /home/website/rsync_cache/*
 fi
