--- a/puppet/modules/rbot/templates/redmine_urls.rb.erb
+++ b/puppet/modules/rbot/templates/redmine_urls.rb.erb
@@ -47,7 +47,7 @@ class RedmineUrlsPlugin < Plugin
 		# chat messages
 		return unless m.kind_of?(PrivMessage) && m.public?
 
-    refs = m.message.scan(/(?:^|\W)(\[\S+\]|r\d+|\#\d+|\#\#[\w\d\-_\.\/]+|K\#[\w\d\-_\.\/]+|wiki:\w+\#?\w+|changeset:\w+|bz\d+)(?:$|\W)/i).flatten
+    refs = m.message.scan(/(?:^|\W)(\[\S+\]|r\d+|\#\d+|\#\#[\w\d\-_\.\/]+|K\#[\w\d\-_\.\/]+|wiki:[\w-]+\#?[\w-]+|changeset:\w+|bz\d+|ERF\d+\-\d+)(?:$|\W)/i).flatten
 
 		# Do we have at least one possible reference?
 		return unless refs.length > 0
@@ -112,11 +112,14 @@ class RedmineUrlsPlugin < Plugin
 			when /\#(\d+)/:
 				[bug_url(base, project, $1), :ticket]
 
-      when /wiki:(\w+\#?\w+)/:
+      when /wiki:([\w-]+\#?[\w-]+)/:
         [wiki_url(base, project, $1), :wiki]
 
       when /bz(\d+)/i:
         [bz_url($1), :ticket]
+
+      when /(ERF\d+\-\d+)/i:
+        [wiki_url(base, project, $1), :wiki]
 		end
 	end
 
