Update redmine wiki URL

--- a/puppet/modules/rbot/templates/redmine_urls.rb.erb
+++ b/puppet/modules/rbot/templates/redmine_urls.rb.erb
@@ -165,7 +165,7 @@ class RedmineUrlsPlugin < Plugin
 	end
 
 	def wiki_url(base_url, project, page)
-		base_url + '/wiki/' + project + '/' + page
+		base_url + '/projects/' + project + '/wiki/' + page
 	end
 
 	def bz_url(bz)
